--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,9 @@ body {
   --nav-load-time: 300ms;
   --nav-link-load-time: 500ms;
   --article-load-delay: calc(var(--nav-load-time) + var(--nav-link-load-time));
-  background-color: rgba(0, 0, 0, 0.904);
+  background: linear-gradient(to right, rgba(17, 16, 16, 0.945), rgba(16, 42, 66, 0.924));
+  background-repeat: no-repeat;
+  height: 100vh;
 }
 
 .icon > img{
